--- a/board_front/package.json
+++ b/board_front/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "apollo-boost": "^0.4.9",
+    "bootstrap": "^5.2.2",
     "graphql": "^15.8.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
